    - btrfs: fix crash on racing fsync and size-extending write into prealloc
    - [powerpc*] bpf: enforce full ordering for ATOMIC operations with BPF_FETCH
    - smb: client: fix deadlock in smb2_find_smb_tcon()
    - smp: Provide 'setup_max_cpus' definition on UP too

  [ Uwe Kleine-König ]
  * [arm*] Enable symbols in Raspberry Pi device trees for simplified overlay
    application.

  [ Salvatore Bonaccorso ]
  * Bump ABI to 22
  * [rt] Update to 6.1.90-rt30
  * net/sched: taprio: always validate TCA_TAPRIO_ATTR_PRIOMAP (CVE-2024-36974)

 -- Uwe Kleine-König <ukleinek@debian.org>  Tue, 07 May 2024 11:51:55 +0200

linux (6.1.90-1) bookworm-security; urgency=high

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v6.x/ChangeLog-6.1.86
    - amdkfd: use calloc instead of kzalloc to avoid integer overflow
      (CVE-2024-26817)
    - wifi: ath9k: fix LNA selection in ath_ant_try_scan()
    - bnx2x: Fix firmware version string character counts
    - wifi: rtw89: pci: enlarge RX DMA buffer to consider size of RX descriptor
    - [x86] VMCI: Fix memcpy() run-time warning in dg_dispatch_as_host()
    - wifi: iwlwifi: pcie: Add the PCI device id for new hardware
    - panic: Flush kernel log buffer at the end
    - cpuidle: Avoid potential overflow in integer multiplication
    - [arm64] dts: rockchip: fix rk3328 hdmi ports node
    - [arm64] dts: rockchip: fix rk3399 hdmi ports node
    - ionic: set adminq irq affinity
    - net: skbuff: add overflow debug check to pull/push helpers
    - wifi: brcmfmac: Add DMI nvram filename quirk for ACEPC W5 Pro
    - pstore/zone: Add a null pointer check to the psz_kmsg_read
    - net: pcs: xpcs: Return EINVAL in the internal methods
    - dma-direct: Leak pages on dma_set_decrypted() failure
    - wifi: ath11k: decrease MHI channel buffer length to 8KB
    - cpufreq: Don't unregister cpufreq cooling on CPU hotplug
    - btrfs: handle chunk tree lookup error in btrfs_relocate_sys_chunks()